--- a/user-panel/src/index.css
+++ b/user-panel/src/index.css
@@ -66,7 +66,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
-/* nav{
+nav{
   background-color: aliceblue;
   width: 100%;
   display: flex;
@@ -82,7 +82,7 @@ nav a{
   font: 300 1,5rem "Roboto", sans-serif;
   padding: 1rem;
   margin:0 2vmax;
-} */
+}
 /* Modal.css */
 .modal-overlay {
   position: fixed;
